@@ -1,6 +1,11 @@
+2003-10-17  Paul Brook  <paul@nowt.org>
+
+	* gfortran.fortran-torture/execute/intrinsic_size.f90: Add
+	additional case.
+
 2003-10-17  Feng Wang  <wf_cs@yahoo.com>
 
-	* gfortran.fortran-torture/execute/intrinsics_mmloc_2.f90: New test.
+	* gfortran.fortran-torture/execute/intrinsic_mmloc_2.f90: New test.
 
 2003-10-16  Richard Henderson  <rth@redhat.com>
 
