@@ -1,5 +1,9 @@
 2003-10-17  Paul Brook  <paul@nowt.org>
 
+	* simplify.c (gfc_simplify_shape): Use gfc_array_dimen_size.
+
+2003-10-17  Paul Brook  <paul@nowt.org>
+
 	* trans-io.c (gfc_build_io_library_fndecls): Set TREE_PUBLIC.
 
 2003-10-17  Feng Wang  <wf_cs@yahoo.com>
